src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&family=Libre+Baskerville&family=Raleway:wght@100&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Leckerli+One&family=Libre+Baskerville&family=Raleway:wght@100&display=swap');

@layer base{
  html{
    font-family: 'Raleway', sans-serif;
  }
  }

/* Define keyframe animations for each leaf */
@keyframes sway-1 {
  0% {
    transform: translate(0, 0);
  }
  50% {
    transform: translate(3px, 3px); 
  }
  100% {
    transform: translate(0, 0);
  }
}

@keyframes sway-2 {
  0% {
    transform: translate(0, 0);
  }
  50% {
    transform: translate(-3px, -3px); 
  }
  100% {
    transform: translate(0, 0);
  }
}

.white-leaf {
  filter: brightness(70) invert(0);
  
}

.leaf-animation-1 {
  animation: sway-1 4s infinite linear; 
}

.leaf-animation-2 {
  animation: sway-2 5s infinite linear; 
}

body {
  background-image: url('./assets/images/background.jpg'); 
  background-size: cover; 
  background-repeat: no-repeat; 
  background-attachment: fixed; 
}

.glow-on-hover {
  transition: all 0.3s ease;
}

.glow-on-hover:hover {
  text-shadow: 0 0 5px rgba(255, 255, 255, 1);
}

@media (max-width: 768px) {
  body {
    body {
      background-size: 400%; 
      background-repeat: no-repeat;
      background-position: center; 
    }
  }
}

